--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <div class="container bg-dark text-light py-4">
         <div class="h1 text-center">Bizimlə Əlaqə</div>
         <div class="map img-thumbnail">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.0312503388855!2d49.90071928842285!3d40.385999996566646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307d8144e08d71%3A0xbdfda3ce222b3ed3!2sASPA%20Education%20Center!5e0!3m2!1saz!2saz!4v1745936349364!5m2!1saz!2saz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.0312503388855!2d49.90071928842285!3d40.385999996566646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307d8144e08d71%3A0xbdfda3ce222b3ed3!2sASPA%20Education%20Center!5e0!3m2!1saz!2saz!4v1745936349364!5m2!1saz!2saz" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="container sosial mt-4">
           <a href="https://wa.me/+994503237003">
