--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 3px;
+        margin bottom: 40px;
       }
       .sos{
         width: 30px;
